Create display and buttons on html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,32 @@
   <script src="./js/script.js" defer></script>
   <title>Mahmoud's Calculator</title>
 </head>
+
 <body>
-  
+
+  <div id="calculator">
+    <div id="display">42</div>
+    <button id="clear">C</button>
+    <div id="digits">
+      <div id="numbers">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+      </div>
+      <div id="zeroDotEqual">
+        <button>0</button>
+        <button>.</button>
+        <button>=</button>
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
