Add html buttons for math functions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <div id="calculator">
     <div id="display">42</div>
     <button id="clear">C</button>
+    <div id="functions">
+      <button>+</button>
+      <button>-</button>
+      <button>*</button>
+      <button>/</button>
+    </div>
     <div id="digits">
       <div id="numbers">
         <button>1</button>
@@ -32,6 +38,7 @@
         <button>.</button>
         <button>=</button>
       </div>
+
     </div>
   </div>
 
