--- a/index.html
+++ b/index.html
@@ -13,31 +13,45 @@
 <body>
 
   <div id="calculator">
-    <div id="display">42</div>
-    <button id="clear">C</button>
-    <div id="functions">
-      <button>+</button>
-      <button>-</button>
-      <button>*</button>
-      <button>/</button>
+    <div id="display">
+      <div>42</div>
     </div>
-    <div id="digits">
-      <div id="numbers">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+    <div id="clearContainer">
+      <button id="clear" class="button-4">C</button>
+      <button id="undo" class="button-4">Z</button>
+    </div>
+
+    <div id="mainBody">
+      <div id="functions">
+        <button class="button-4">+</button>
+        <button class="button-4">-</button>
+        <button class="button-4">*</button>
+        <button class="button-4">/</button>
       </div>
-      <div id="zeroDotEqual">
-        <button>0</button>
-        <button>.</button>
-        <button>=</button>
-      </div>
+      <div id="digits">
+        <div id="numbers">
+          <div id="rowOne">
+            <button class="button-4">7</button>
+            <button class="button-4">8</button>
+            <button class="button-4">9</button>
+          </div>
+          <div id="rowTwo">
+            <button class="button-4">4</button>
+            <button class="button-4">5</button>
+            <button class="button-4">6</button>
+          </div>
+          <div id="rowThree">
+            <button class="button-4">1</button>
+            <button class="button-4">2</button>
+            <button class="button-4">3</button>
+          </div>
+        </div>
+        <div id="zeroDotEqual">
+          <button class="button-4">0</button>
+          <button class="button-4">.</button>
+          <button class="button-4">=</button>
+        </div>
+    </div>
 
     </div>
   </div>
