--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
       <div id="digits">
         <div id="numbers">
           <div id="rowOne">
-            <button class="button-4">7</button>
-            <button class="button-4">8</button>
-            <button class="button-4">9</button>
+            <button class="button-4 num">7</button>
+            <button class="button-4 num">8</button>
+            <button class="button-4 num">9</button>
           </div>
           <div id="rowTwo">
-            <button class="button-4">4</button>
-            <button class="button-4">5</button>
-            <button class="button-4">6</button>
+            <button class="button-4 num">4</button>
+            <button class="button-4 num">5</button>
+            <button class="button-4 num">6</button>
           </div>
           <div id="rowThree">
-            <button class="button-4">1</button>
-            <button class="button-4">2</button>
-            <button class="button-4">3</button>
+            <button class="button-4 num">1</button>
+            <button class="button-4 num">2</button>
+            <button class="button-4 num">3</button>
           </div>
         </div>
         <div id="zeroDotEqual">
-          <button class="button-4">0</button>
-          <button class="button-4">.</button>
+          <button class="button-4 num">0</button>
+          <button class="button-4 num dot">.</button>
           <button class="button-4">=</button>
         </div>
     </div>
