--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div id="calculator">
     <div id="display">
-      <div>42</div>
+      <div></div>
     </div>
     <div id="clearContainer">
       <button id="clear" class="button-4">C</button>
@@ -23,10 +23,10 @@
 
     <div id="mainBody">
       <div id="functions">
-        <button class="button-4">+</button>
-        <button class="button-4">-</button>
-        <button class="button-4">*</button>
-        <button class="button-4">/</button>
+        <button class="button-4 operator ender adder">+</button>
+        <button class="button-4 operator ender subtracter">-</button>
+        <button class="button-4 operator ender multiplier">*</button>
+        <button class="button-4 operator ender divider">/</button>
       </div>
       <div id="digits">
         <div id="numbers">
@@ -49,7 +49,7 @@
         <div id="zeroDotEqual">
           <button class="button-4 num">0</button>
           <button class="button-4 num dot">.</button>
-          <button class="button-4">=</button>
+          <button class="button-4 ender equalSign">=</button>
         </div>
     </div>
 
