Create populateDisplay with functioning digits

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div id="zeroDotEqual">
           <button class="button-4 num">0</button>
-          <button class="button-4 num dot">.</button>
+          <button class="button-4 dot">.</button>
           <button class="button-4 ender equalSign">=</button>
         </div>
     </div>
