Make operate() work on first calculation

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div id="mainBody">
       <div id="functions">
-        <button class="button-4 operator ender adder">+</button>
-        <button class="button-4 operator ender subtracter">-</button>
-        <button class="button-4 operator ender multiplier">*</button>
-        <button class="button-4 operator ender divider">/</button>
+        <button class="button-4 operator adder">+</button>
+        <button class="button-4 operator subtracter">-</button>
+        <button class="button-4 operator multiplier">*</button>
+        <button class="button-4 operator divider">/</button>
       </div>
       <div id="digits">
         <div id="numbers">
@@ -49,7 +49,7 @@
         <div id="zeroDotEqual">
           <button class="button-4 num">0</button>
           <button class="button-4 dot">.</button>
-          <button class="button-4 ender equalSign">=</button>
+          <button class="button-4 equalSign">=</button>
         </div>
     </div>
 
