Make a simple operate then equal calculator

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div id="mainBody">
       <div id="functions">
-        <button class="button-4 operator adder">+</button>
-        <button class="button-4 operator subtracter">-</button>
-        <button class="button-4 operator multiplier">*</button>
-        <button class="button-4 operator divider">/</button>
+        <button kind="add" class="button-4 operator adder">+</button>
+        <button kind="subtract" class="button-4 operator subtracter">-</button>
+        <button kind="multiply" class="button-4 operator multiplier">*</button>
+        <button kind="divide" class="button-4 operator divider">/</button>
       </div>
       <div id="digits">
         <div id="numbers">
