Add clear backspace  x/0 msg & fix infinite equals

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
     <div id="clearContainer">
       <button id="clear" class="button-4">C</button>
-      <button id="undo" class="button-4">Z</button>
+      <button id="backspace" class="button-4"><=</button>
+      <button id="minus" class="button-4">+/-</button>
+
     </div>
 
     <div id="mainBody">
